--- a/frontend/www/css/stylesheet.css
+++ b/frontend/www/css/stylesheet.css
@@ -19,6 +19,11 @@ td.digitList {
 	font: 14px Arial, Verdana, sans-serif;
 	height: 24px;
 	padding: 5px 10px;
+        placeholder
+}
+.REDField::-webkit-input-placeholder { color:#fff; }
+#modal input{
+    vertical-align: baseline; 
 }
 ul.HeadList {
 	text-align: left;
@@ -74,6 +79,7 @@ border-radius:5px;
  padding: 10px;
  border: 3px solid #969;
  border-radius: 8px;
+ margin-right: 20px;
 }
   /* Pop-up message and fading background */
   #opaco {
@@ -91,17 +97,7 @@ border-radius:5px;
      z-index: 10;
    }
 
-  #popup {
-     background-color: #FFFFFF;
-     position: fixed;
-     left:0;
-     top:0;
-	 border: 4px solid #ffe717;
-	 border-radius: 10px;
-	 padding: 10px;
-     min-width: 300px;
-     z-index: 11;
-  }
+ 
 
   #popup h3 {
     margin-bottom: 10px;
